--- a/project11/TestPrograms/Average/Main.vm
+++ b/project11/TestPrograms/Average/Main.vm
@@ -35,6 +35,8 @@ push constant 115
 call String.appendChar 2
 push constant 63
 call String.appendChar 2
+push constant 32
+call String.appendChar 2
 call Keyboard.readInt 1
 pop local 1
 push local 1
@@ -97,6 +99,8 @@ call String.appendChar 2
 push constant 114
 call String.appendChar 2
 push constant 58
+call String.appendChar 2
+push constant 32
 call String.appendChar 2
 call Keyboard.readInt 1
 pop that 0
@@ -162,6 +166,8 @@ push constant 115
 call String.appendChar 2
 push constant 58
 call String.appendChar 2
+push constant 32
+call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push local 3
@@ -171,4 +177,5 @@ call Output.printInt 1
 pop temp 0
 call Output.println 0
 pop temp 0
+push constant 0
 return
