--- a/project11/TestPrograms/Square/Square.vm
+++ b/project11/TestPrograms/Square/Square.vm
@@ -19,6 +19,7 @@ pop pointer 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
+push constant 0
 return
 function Square.draw 0
 push argument 0
@@ -37,6 +38,7 @@ push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
+push constant 0
 return
 function Square.erase 0
 push argument 0
@@ -54,6 +56,7 @@ push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
+push constant 0
 return
 function Square.incSize 0
 push argument 0
@@ -84,6 +87,7 @@ pop temp 0
 goto SquareincSize1
 label SquareincSize0
 label SquareincSize1
+push constant 0
 return
 function Square.decSize 0
 push argument 0
@@ -106,6 +110,7 @@ pop temp 0
 goto SquaredecSize1
 label SquaredecSize0
 label SquaredecSize1
+push constant 0
 return
 function Square.moveUp 0
 push argument 0
@@ -153,6 +158,7 @@ pop temp 0
 goto SquaremoveUp1
 label SquaremoveUp0
 label SquaremoveUp1
+push constant 0
 return
 function Square.moveDown 0
 push argument 0
@@ -202,6 +208,7 @@ pop temp 0
 goto SquaremoveDown1
 label SquaremoveDown0
 label SquaremoveDown1
+push constant 0
 return
 function Square.moveLeft 0
 push argument 0
@@ -249,6 +256,7 @@ pop temp 0
 goto SquaremoveLeft1
 label SquaremoveLeft0
 label SquaremoveLeft1
+push constant 0
 return
 function Square.moveRight 0
 push argument 0
@@ -298,4 +306,5 @@ pop temp 0
 goto SquaremoveRight1
 label SquaremoveRight0
 label SquaremoveRight1
+push constant 0
 return
