--- a/project11/TestPrograms/Average/Main.vm
+++ b/project11/TestPrograms/Average/Main.vm
@@ -53,7 +53,7 @@ if-goto Mainmain1
 push local 2
 push local 0
 add
-pop pointer 1
+pop temp 0
 push constant 23
 call String.new 1
 push constant 69
@@ -103,6 +103,8 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Keyboard.readInt 1
+push temp 0
+pop pointer 1
 pop that 0
 push local 2
 push constant 1
