--- a/project09/Breakaway/Paddle.vm
+++ b/project09/Breakaway/Paddle.vm
@@ -42,6 +42,9 @@ return
 function Paddle.dispose 0
 push argument 0
 pop pointer 0
+push this 6
+call Hitbox.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
