--- a/project09/Breakaway/Brick.vm
+++ b/project09/Breakaway/Brick.vm
@@ -58,6 +58,9 @@ return
 function Brick.dispose 0
 push argument 0
 pop pointer 0
+push this 4
+call Hitbox.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
