--- a/project09/Breakaway/PlayArea.vm
+++ b/project09/Breakaway/PlayArea.vm
@@ -44,6 +44,9 @@ return
 function PlayArea.dispose 0
 push argument 0
 pop pointer 0
+push this 6
+call Hitbox.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
