--- a/project09/Breakaway/Wall.vm
+++ b/project09/Breakaway/Wall.vm
@@ -12,6 +12,9 @@ return
 function Wall.dispose 0
 push argument 0
 pop pointer 0
+push this 1
+call Array.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
